rename shell script to make it visible

--- a/Lab-1/latex-report/180631J_Lab1_EN4603.tex
+++ b/Lab-1/latex-report/180631J_Lab1_EN4603.tex
@@ -22,6 +22,30 @@
 \textit{All the materials related to the report can also be found at \url{https://github.com/bimalka98/Digital-IC-Design}}
 \pagebreak
 
+\section{Introduction}
+
+In this practical, we will be using Cadence Genus to synthesize an example RTL design: a
+transceiver. As inputs to Genus, we will provide
+
+\begin{enumerate}
+	\item Source Verilog files
+	\item Technology libraries provided by the fabrication plant (here, 35 nm educational GPDK
+given by cadence) : .lib, .lef, .tch
+	\item Timing constraints
+\begin{enumerate}
+
+and will obtain the synthesized netlist (Verilog files) and further timing constrains (.sdc) as
+output. We will then analyze the area, timing and power of the synthesized design.
+
+\section{Exercise}
+
+\subsection{System Clocks \& Resets}
+
+\subsubsection{System Clocks}
+
+
+
+
 
 \vfill
 \hrule
