add genus reference

--- a/Lab-1 - RTL Synthesis/report/180631J_Lab1_EN4603.tex
+++ b/Lab-1 - RTL Synthesis/report/180631J_Lab1_EN4603.tex
@@ -52,7 +52,7 @@ During \ac{rtl} synthesis, an \ac{rtl} compiler reads the \ac{rtl} description o
 	\fbox{
 		\includegraphics[width=0.53\linewidth]{figures/flow.PNG}
 	}
-	\caption{Overview of an \ac{rtl} synthesis flow.}
+	\caption{Overview of an \ac{rtl} synthesis flow\cite{genus_user_guide_2019}.}
 	\label{fig:asic_flow}
 \end{figure}
 
@@ -69,7 +69,7 @@ During \ac{rtl} synthesis, an \ac{rtl} compiler reads the \ac{rtl} description o
 \vfill
 \hrule
 \vspace{0.5cm}
-\bibliographystyle{plain}
+\bibliographystyle{IEEEtran}
 \bibliography{refer}
 
 %---------------------------------------------------------------------------
