--- a/Lab-1 - RTL Synthesis/report/refer.bib
+++ b/Lab-1 - RTL Synthesis/report/refer.bib
@@ -11,3 +11,9 @@ eprint = {https://mhebooklibrary.com/doi/pdf/10.1036/0071454241},
 ISBN   = {0071454241},
 pages   = {-1}
 }
+
+@misc{genus_user_guide_2019,
+	title={{Genus User Guide for Legacy UI}},
+	capital={Genus User Guide for Legacy UI},
+	note={Version 19.1, November 2019, published by \textit{ Cadence Design Systems, Inc.}}
+}
