--- a/Lab-1 - RTL Synthesis/report/content/abbreviations.tex
+++ b/Lab-1 - RTL Synthesis/report/content/abbreviations.tex
@@ -8,6 +8,8 @@
 	\acro{hdl}[HDL]{Hardware Description Language}
 		
 	\acro{rtl}[RTL]{Register-Transfer Level}
+	
+	\acro{tcl}[TCL]{Tool Command Language}
 \end{acronym}
 
 
