--- a/Lab-1 - RTL Synthesis/report/refer.bib
+++ b/Lab-1 - RTL Synthesis/report/refer.bib
@@ -17,3 +17,9 @@ pages   = {-1}
 	capital={Genus User Guide for Legacy UI},
 	note={Version 19.1, November 2019, published by \textit{ Cadence Design Systems, Inc.}}
 }
+
+@misc{genus_command_ref_2019,
+	title={{Genus Command Reference}},
+	capital={Genus Command Reference},
+	note={Version 19.1, November 2019, published by \textit{ Cadence Design Systems, Inc.}}
+}
