--- a/Lab-1 - RTL Synthesis/report/settings/packages.tex
+++ b/Lab-1 - RTL Synthesis/report/settings/packages.tex
@@ -43,3 +43,9 @@ justification=centering]{caption}
 \usepackage{xcolor}
 \usepackage{pstricks}
 \usepackage{acronym}
+\usepackage{fancyvrb}
+\usepackage[
+width=\textwidth,
+font=footnotesize,
+justification=centering]{caption}
+\usepackage{tabularx}
