--- a/Lab-1 - RTL Synthesis/report/content/abbreviations.tex
+++ b/Lab-1 - RTL Synthesis/report/content/abbreviations.tex
@@ -1,7 +1,7 @@
 \section*{List of Abbreviations}
 \addcontentsline{toc}{section}{List of Abbreviations}
 \begin{acronym}
-%	\acro{asic}[ASIC]{Application Specific Integrated Circuit}
+	\acro{asic}[ASIC]{Application Specific Integrated Circuit}
 		
 	\acro{gpdk}[GPDK]{Generic Process Design Kit}
 		
