--- a/Lab-1 - RTL Synthesis/report/180631J_Lab1_EN4603.tex
+++ b/Lab-1 - RTL Synthesis/report/180631J_Lab1_EN4603.tex
@@ -70,7 +70,7 @@ During \ac{rtl} synthesis, an \ac{rtl} compiler reads the \ac{rtl} description o
 \textbf{Note}: \textit{Genus is a \ac{tcl} based tool and therefore {\tt .tcl} scripts can be created to execute a series of commands instead of typing each command individually. The entire interface of Genus is accessible through \ac{tcl}, and true \ac{tcl} syntax and semantics are supported.}\\
 
 Followings are the commands used in this lab, and the entire script could be executed once using a single {\tt .tcl} file. However, it was encouraged to execute the commands one-by-one in order to understand the process of synthesizing an \ac{rtl} design.
-
+\vspace{2cm}
 \begin{Verbatim}[frame=single]
 # 1. Link Technology Library
 set_db init_lib_search_path [list ../input/libs/gsclib045/lef
@@ -170,13 +170,13 @@ A \textit{derived clock} (a new clock signal) can be created from the clock wave
 {\tt area.log} file in the {\tt report} directory carries the information shown in the Figure \ref{fig:area_log}. It provides a breakdown of the area usage by design hierarchy and by instance, which can be helpful in identifying specific modules that are contributing to the overall area of the design. Specifically it provides the below information\cite{genus_command_ref_2019}.
 
 \begin{enumerate}[i.]
-	\item \textbf{\textit{Cell Count}} : The total count of cells mapped against the hierarchical blocks in the current design.
+	\item \textbf{{Cell Count}} : The total count of cells mapped against the hierarchical blocks in the current design.
 	
-	\item \textbf{\textit{Cell Area}} : The combined cell area in each of the blocks and the top level design (hierarchical breakup)
+	\item \textbf{{Cell Area}} : The combined cell area in each of the blocks and the top level design (hierarchical breakup)
 	
-	\item \textbf{\textit{Net Area}} : The estimated post-route net area, which is based on the minimum wire widths defined in the LEF and capacitance table files and the area of the design blocks.
+	\item \textbf{{Net Area}} : The estimated post-route net area, which is based on the minimum wire widths defined in the LEF and capacitance table files and the area of the design blocks.
 	
-	\item \textbf{\textit{Total Area}} : Simply combines the `Cell Area' and the `Net Area'
+	\item \textbf{{Total Area}} : Simply combines the `Cell Area' and the `Net Area'
 \end{enumerate}
 
 
@@ -191,6 +191,27 @@ A \textit{derived clock} (a new clock signal) can be created from the clock wave
 
 
 \subsubsection{Power}
+{\tt power.log} file in the {\tt report} directory carries the details shown in the Figure \ref{fig:power_log}. It provides the information related to the power consumption; however, the returned information depends on the current position in the design hierarchy and on the specified objects. If no objects are specified, the report is given for the design or instance at the current position in the design hierarchy\cite{genus_command_ref_2019}.
+
+\begin{enumerate}[i.] %re check
+	\item Leakage power refers to the power that is consumed by the circuit even when it is in a quiescent or standby state. This type of power consumption is caused by the leakage current flowing through the transistors and other components in the circuit.
+	
+	\item Dynamic power refers to the power that is consumed by the circuit when it is actively switching or performing computations. This type of power consumption is caused by the charging and discharging of the load capacitance at the inputs and outputs of the transistors.
+	
+	\item Total power is the sum of leakage power and dynamic power, it is the overall power consumed by the circuit.
+\end{enumerate}
+
+
+\begin{figure}[h]
+	\centering
+	\fbox{
+		\includegraphics[width=0.65\linewidth]{figures/power_log.PNG}
+	}
+	\caption{Power log file}
+	\label{fig:power_log}
+\end{figure}
+
+
 \subsubsection{Timing}
 \subsubsection{Ports}
 
