--- a/Lab-1 - RTL Synthesis/report/180631J_Lab1_EN4603.tex
+++ b/Lab-1 - RTL Synthesis/report/180631J_Lab1_EN4603.tex
@@ -167,7 +167,7 @@ A \textit{derived clock} (a new clock signal) can be created from the clock wave
 
 \subsubsection{Area}
 
-{\tt area.log} file in the {\tt report} directory carries the information shown in the Figure \ref{fig:area_log}. It provides a breakdown of the area usage by design hierarchy and by instance, which can be helpful in identifying specific modules that are contributing to the overall area of the design. Specifically it provides the below information\cite{genus_command_ref_2019}.
+The {\tt area.log} file in the {\tt report} directory carries the information shown in the Figure \ref{fig:area_log}. It provides a breakdown of the area usage by design hierarchy and by instance, which can be helpful in identifying specific modules that are contributing to the overall area of the design. Specifically it provides the below information\cite{genus_command_ref_2019}.
 
 \begin{enumerate}[i.]
 	\item \textbf{{Cell Count}} : The total count of cells mapped against the hierarchical blocks in the current design.
@@ -191,21 +191,21 @@ A \textit{derived clock} (a new clock signal) can be created from the clock wave
 
 
 \subsubsection{Power}
-{\tt power.log} file in the {\tt report} directory carries the details shown in the Figure \ref{fig:power_log}. It provides the information related to the power consumption; however, the returned information depends on the current position in the design hierarchy and on the specified objects. If no objects are specified, the report is given for the design or instance at the current position in the design hierarchy\cite{genus_command_ref_2019}.
+The {\tt power.log} file in the {\tt report} directory carries the details shown in the Figure \ref{fig:power_log}. It provides the information related to the power consumption; however, the returned information depends on the current position in the design hierarchy and on the specified objects. If no objects are specified, the report is given for the design or instance at the current position in the design hierarchy\cite{genus_command_ref_2019}.
 
 \begin{enumerate}[i.] %re check
-	\item Leakage power refers to the power that is consumed by the circuit even when it is in a quiescent or standby state. This type of power consumption is caused by the leakage current flowing through the transistors and other components in the circuit.
+	\item \textbf{Leakage Power} refers to the power that is consumed by the circuit even when it is in a quiescent or standby state. This type of power consumption is caused by the leakage current flowing through the transistors and other components in the circuit.
 	
-	\item Dynamic power refers to the power that is consumed by the circuit when it is actively switching or performing computations. This type of power consumption is caused by the charging and discharging of the load capacitance at the inputs and outputs of the transistors.
+	\item \textbf{Dynamic Power} refers to the power that is consumed by the circuit when it is actively switching or performing computations. This type of power consumption is caused by the charging and discharging of the load capacitance at the inputs and outputs of the transistors.
 	
-	\item Total power is the sum of leakage power and dynamic power, it is the overall power consumed by the circuit.
+	\item \textbf{Total Power} is the sum of leakage power and dynamic power, it is the overall power consumed by the circuit.
 \end{enumerate}
 
 
 \begin{figure}[h]
 	\centering
 	\fbox{
-		\includegraphics[width=0.65\linewidth]{figures/power_log.PNG}
+		\includegraphics[width=0.75\linewidth]{figures/power_log.PNG}
 	}
 	\caption{Power log file}
 	\label{fig:power_log}
@@ -213,6 +213,41 @@ A \textit{derived clock} (a new clock signal) can be created from the clock wave
 
 
 \subsubsection{Timing}
+The {\tt timing.log} file in the {\tt report} directory carries the details shown in the Figure \ref{fig:timing_log}. The command given below was used to generate this timing report. `{\tt -nworst 10}' argument in the command specifies that, the maximum number of paths to report to each endpoint is 10.
+
+\begin{Verbatim}[frame=single]
+report_timing  -nworst 10 > ../report/timing.log
+
+Warning : Possible timing problems have been detected in this design. [TIM-11]
+: The design is 'uart_top'.
+: Use 'report timing -lint' for more information.
+\end{Verbatim}
+
+In addition, below constraints are defined in the {\tt constraints.tcl} to be used for the synthesis. Here the input delay is constrained to $6~ns = 6000~ps$, and this information is also available in the timing report shown in the Figure \ref{fig:timing_log}.
+
+\begin{Verbatim}[frame=single]
+set_input_delay  6 -clock clk_a  $design_inputs_a
+set_input_delay  6 -clock clk_b  $design_inputs_b
+set_output_delay 6 -clock clk_a $design_outputs_a
+set_output_delay 6 -clock clk_b $design_outputs_b
+\end{Verbatim}
+
+
+\begin{figure}[H]
+	\centering
+	\fbox{
+		\includegraphics[width=0.95\linewidth]{figures/timing_log.PNG}
+	}
+	\caption{Timing log file}
+	\label{fig:timing_log}
+\end{figure}
+
+According to the information found on the timing log file, \textbf{the most critical path} (Path 1 in Figure \ref{fig:timing_log}) has a positive slack time of $2539~ps$.  This is the least slack time of the given design. This indicates that, there is no timing violations in the design.\\
+
+Note: Slack is a measure of the timing margin available in a design. It is the difference between the \textit{Required Time} and the \textit{Arrival Time} of a signal at a specific endpoint. Positive slack indicates that the design meets the timing constraints and there is extra time available, while negative slack indicates that the design does not meet the timing constraints and the path is considered to be in violation. \textbf{The paths with the least slack are the most critical paths}. A design with a high slack value has more margin for manufacturing variations, temperature changes, and other factors that can affect the timing of the system.
+
+
+
 \subsubsection{Ports}
 
 \pagebreak
