--- a/Lab-1 - RTL Synthesis/report/content/abbreviations.tex
+++ b/Lab-1 - RTL Synthesis/report/content/abbreviations.tex
@@ -8,8 +8,13 @@
 	\acro{hdl}[HDL]{Hardware Description Language}
 		
 	\acro{rtl}[RTL]{Register-Transfer Level}
-	
+	\acro{rx}[RX]{Receiver}
+		
 	\acro{tcl}[TCL]{Tool Command Language}
+	\acro{tx}[TX]{Transmitter}
+	
+	\acro{uart}[UART]{Universal Asynchronous Receiver Transmitter}
+	
 \end{acronym}
 
 
